--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 DEBUG=1
 APPLY_MIGRATIONS=1
 CREATE_SUPERUSER=1
+
+# django-helusers
+OIDC_AUDIENCE=""
+OIDC_API_SCOPE_PREFIX=""
+OIDC_REQUIRE_API_SCOPE_FOR_AUTHENTICATION=False
+OIDC_ISSUER=""
+
+SOCIAL_AUTH_TUNNISTAMO_KEY=""
+SOCIAL_AUTH_TUNNISTAMO_SECRET=""
+SOCIAL_AUTH_TUNNISTAMO_OIDC_ENDPOINT=""
