--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,8 @@
 Django~=2.2
 django-cors-headers
 django-environ
+django-helusers
 django-ilmoitin~=0.5.0
 psycopg2
 sentry-sdk
+social-auth-app-django
