--- a/requirements.txt
+++ b/requirements.txt
@@ -5,22 +5,42 @@
 #    pip-compile requirements.in
 #
 certifi==2020.6.20        # via requests, sentry-sdk
+cffi==1.14.3              # via cryptography
 chardet==3.0.4            # via requests
+cryptography==3.1         # via social-auth-core
+defusedxml==0.6.0         # via python3-openid, social-auth-core
 django-anymail==7.2.1     # via django-ilmoitin
 django-cors-headers==3.5.0  # via -r requirements.in
 django-environ==0.4.5     # via -r requirements.in
+django-helusers==0.5.6    # via -r requirements.in
 django-ilmoitin==0.5.3    # via -r requirements.in
 django-mailer==2.0.1      # via django-ilmoitin
 django-parler==1.9.2      # via django-ilmoitin
-django==2.2.13            # via -r requirements.in, django-anymail, django-cors-headers, django-ilmoitin, django-mailer
+django==2.2.13            # via -r requirements.in, django-anymail, django-cors-headers, django-helusers, django-ilmoitin, django-mailer, djangorestframework, drf-oidc-auth
+djangorestframework==3.11.1  # via drf-oidc-auth
+drf-oidc-auth==0.10.0     # via django-helusers
+ecdsa==0.14.1             # via python-jose
+future==0.18.2            # via pyjwkest
 idna==2.10                # via requests
 jinja2==2.11.2            # via django-ilmoitin
 lockfile==0.12.2          # via django-mailer
 markupsafe==1.1.1         # via jinja2
+oauthlib==3.1.0           # via requests-oauthlib, social-auth-core
 psycopg2==2.8.6           # via -r requirements.in
+pyasn1==0.4.8             # via python-jose, rsa
+pycparser==2.20           # via cffi
+pycryptodomex==3.9.8      # via pyjwkest
+pyjwkest==1.4.2           # via drf-oidc-auth
+pyjwt==1.7.1              # via social-auth-core
+python-jose==3.2.0        # via django-helusers
+python3-openid==3.2.0     # via social-auth-core
 pytz==2020.1              # via django
-requests==2.24.0          # via django-anymail
+requests-oauthlib==1.3.0  # via social-auth-core
+requests==2.24.0          # via django-anymail, django-helusers, pyjwkest, requests-oauthlib, social-auth-core
+rsa==4.6                  # via python-jose
 sentry-sdk==0.17.3        # via -r requirements.in
-six==1.15.0               # via django-anymail, django-mailer
+six==1.15.0               # via cryptography, django-anymail, django-mailer, ecdsa, pyjwkest, python-jose, social-auth-app-django, social-auth-core
+social-auth-app-django==4.0.0  # via -r requirements.in
+social-auth-core==3.3.3   # via social-auth-app-django
 sqlparse==0.3.1           # via django
 urllib3==1.25.10          # via requests, sentry-sdk
