--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ OIDC_ISSUER=""
 SOCIAL_AUTH_TUNNISTAMO_KEY=""
 SOCIAL_AUTH_TUNNISTAMO_SECRET=""
 SOCIAL_AUTH_TUNNISTAMO_OIDC_ENDPOINT=""
+
+ELASTICSEARCH_URL=http://apartment-application-elasticsearch:9200
