--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,23 @@ addons:
   postgresql: "12"
   apt:
     packages:
-    - postgresql-12
-    - postgresql-client-12
+      - postgresql-12
+      - postgresql-client-12
 
 matrix:
   include:
     - name: Unit tests
       env: DATABASE_URL=postgres:///apartment-application SECRET_KEY=topsecret123
-      services: [postgresql]
+      services:
+        - postgresql
+      before_install:
+        - curl https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.9.1-amd64.deb -o elasticsearch.deb
+        - sudo dpkg -i --force-confnew elasticsearch.deb
+        - sudo chown -R elasticsearch:elasticsearch /etc/default/elasticsearch
+        - sudo service elasticsearch restart
       install: pip install -r requirements.txt -r requirements-dev.txt
+      before_script:
+        - sleep 10
       script: pytest -ra -vv --doctest-modules --cov=.
       after_success: pip install codecov && codecov
 
