--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile requirements.in
 #
-certifi==2020.6.20        # via requests, sentry-sdk
+certifi==2020.6.20        # via elasticsearch, requests, sentry-sdk
 cffi==1.14.3              # via cryptography
 chardet==3.0.4            # via requests
 cryptography==3.1         # via social-auth-core
@@ -20,6 +20,8 @@ django==2.2.13            # via -r requirements.in, django-anymail, django-cors-
 djangorestframework==3.11.1  # via drf-oidc-auth
 drf-oidc-auth==0.10.0     # via django-helusers
 ecdsa==0.14.1             # via python-jose
+elasticsearch-dsl==7.3.0  # via -r requirements.in
+elasticsearch==7.9.1      # via elasticsearch-dsl
 future==0.18.2            # via pyjwkest
 idna==2.10                # via requests
 jinja2==2.11.2            # via django-ilmoitin
@@ -32,6 +34,7 @@ pycparser==2.20           # via cffi
 pycryptodomex==3.9.8      # via pyjwkest
 pyjwkest==1.4.2           # via drf-oidc-auth
 pyjwt==1.7.1              # via social-auth-core
+python-dateutil==2.8.1    # via elasticsearch-dsl
 python-jose==3.2.0        # via django-helusers
 python3-openid==3.2.0     # via social-auth-core
 pytz==2020.1              # via django
@@ -39,8 +42,8 @@ requests-oauthlib==1.3.0  # via social-auth-core
 requests==2.24.0          # via django-anymail, django-helusers, pyjwkest, requests-oauthlib, social-auth-core
 rsa==4.6                  # via python-jose
 sentry-sdk==0.17.3        # via -r requirements.in
-six==1.15.0               # via cryptography, django-anymail, django-mailer, ecdsa, pyjwkest, python-jose, social-auth-app-django, social-auth-core
+six==1.15.0               # via cryptography, django-anymail, django-mailer, ecdsa, elasticsearch-dsl, pyjwkest, python-dateutil, python-jose, social-auth-app-django, social-auth-core
 social-auth-app-django==4.0.0  # via -r requirements.in
 social-auth-core==3.3.3   # via social-auth-app-django
 sqlparse==0.3.1           # via django
-urllib3==1.25.10          # via requests, sentry-sdk
+urllib3==1.25.10          # via elasticsearch, requests, sentry-sdk
