--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ SOCIAL_AUTH_TUNNISTAMO_SECRET=""
 SOCIAL_AUTH_TUNNISTAMO_OIDC_ENDPOINT=""
 
 ELASTICSEARCH_URL=http://apartment-application-elasticsearch:9200
+APARTMENT_INDEX_NAME=apartment-index
