--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,8 +11,9 @@ black==20.8b1             # via -r requirements-dev.in
 click==7.1.2              # via black
 coverage==5.2.1           # via pytest-cov
 decorator==4.4.2          # via ipython
+factory-boy==3.0.1        # via -r requirements-dev.in
+faker==4.1.3              # via factory-boy
 flake8==3.8.3             # via -r requirements-dev.in
-importlib-metadata==1.7.0  # via flake8, pluggy, pytest
 iniconfig==1.0.1          # via pytest
 ipython-genutils==0.2.0   # via traitlets
 ipython==7.18.1           # via -r requirements-dev.in
@@ -37,14 +38,15 @@ pyparsing==2.4.7          # via packaging
 pytest-cov==2.10.1        # via -r requirements-dev.in
 pytest-django==3.9.0      # via -r requirements-dev.in
 pytest==6.0.1             # via -r requirements-dev.in, pytest-cov, pytest-django
+python-dateutil==2.8.1    # via faker
 regex==2020.7.14          # via black
-six==1.15.0               # via packaging
+six==1.15.0               # via packaging, python-dateutil
+text-unidecode==1.3       # via faker
 toml==0.10.1              # via black, pytest
 traitlets==5.0.3          # via ipython
 typed-ast==1.4.1          # via black
 typing-extensions==3.7.4.3  # via black
 wcwidth==0.2.5            # via prompt-toolkit
-zipp==3.1.0               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
