--- a/requirements.in
+++ b/requirements.in
@@ -3,6 +3,7 @@ django-cors-headers
 django-environ
 django-helusers
 django-ilmoitin~=0.5.0
+djangorestframework
 elasticsearch-dsl>=7.0.0,<8.0.0
 psycopg2
 sentry-sdk
