Update requirements and add django-etuovi
Add django-etuovi to create the mapping between Elasticsearch
fields and the Etuovi API. Update settings and env variables.

Refs ASU-287

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,11 @@ SOCIAL_AUTH_TUNNISTAMO_OIDC_ENDPOINT=
 
 ELASTICSEARCH_URL=http://apartment-application-elasticsearch:9200
 APARTMENT_INDEX_NAME=asuntotuotanto-apartments
+
+# django-etuovi
+ETUOVI_SUPPLIER_SOURCE_ITEMCODE=
+ETUOVI_COMPANY_NAME=
+ETUOVI_TRANSFER_ID=
+ETUOVI_FTP_HOST=
+ETUOVI_USER=
+ETUOVI_PASSWORD=
