Add historical models for the application handling
Add django-simple-history to save a history for the changes in
applications and apartments.

Refs ASU-428

--- a/requirements.in
+++ b/requirements.in
@@ -4,6 +4,7 @@ django-environ
 git+git://github.com/City-of-Helsinki/django-etuovi@develop#egg=django_etuovi  # TODO: change this when released in PyPI
 django-helusers
 django-ilmoitin~=0.5.0
+django-simple-history
 djangorestframework
 elasticsearch-dsl>=7.0.0,<8.0.0
 psycopg2
