--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-helusers==0.5.6    # via -r requirements.in
 django-ilmoitin==0.5.3    # via -r requirements.in
 django-mailer==2.0.1      # via django-ilmoitin
 django-parler==1.9.2      # via django-ilmoitin
+django-simple-history==2.12.0  # via -r requirements.in
 django==2.2.16            # via -r requirements.in, django-anymail, django-cors-headers, django-etuovi, django-helusers, django-ilmoitin, django-mailer, djangorestframework, drf-oidc-auth
 git+git://github.com/City-of-Helsinki/django-etuovi@develop#egg=django_etuovi  # via -r requirements.in
 djangorestframework==3.12.1  # via -r requirements.in, drf-oidc-auth
@@ -44,7 +45,7 @@ requests-oauthlib==1.3.0  # via social-auth-core
 requests==2.24.0          # via django-anymail, django-helusers, pyjwkest, requests-oauthlib, social-auth-core
 rsa==4.6                  # via python-jose
 sentry-sdk==0.19.0        # via -r requirements.in
-six==1.15.0               # via cryptography, django-mailer, ecdsa, elasticsearch-dsl, pyjwkest, python-dateutil, python-jose, social-auth-app-django, social-auth-core
+six==1.15.0               # via cryptography, django-mailer, django-simple-history, ecdsa, elasticsearch-dsl, pyjwkest, python-dateutil, python-jose, social-auth-app-django, social-auth-core
 social-auth-app-django==4.0.0  # via -r requirements.in
 social-auth-core==3.3.3   # via social-auth-app-django
 sqlparse==0.4.1           # via django
