--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,11 @@ dmypy.json
 
 # PyCharm
 .idea/
+
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
