--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,7 +13,9 @@ backcall==0.2.0
 black==20.8b1
     # via -r requirements-dev.in
 click==7.1.2
-    # via black
+    # via
+    #   black
+    #   pip-tools
 coverage==5.2.1
     # via pytest-cov
 decorator==4.4.2
@@ -46,10 +48,14 @@ parso==0.7.1
     # via jedi
 pathspec==0.8.0
     # via black
+pep517==0.10.0
+    # via pip-tools
 pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
+pip-tools==6.0.1
+    # via -r requirements-dev.in
 pluggy==0.13.1
     # via pytest
 prompt-toolkit==3.0.7
@@ -88,6 +94,7 @@ text-unidecode==1.3
 toml==0.10.1
     # via
     #   black
+    #   pep517
     #   pytest
 traitlets==5.0.3
     # via ipython
@@ -99,4 +106,5 @@ wcwidth==0.2.5
     # via prompt-toolkit
 
 # The following packages are considered to be unsafe in a requirements file:
+# pip
 # setuptools
