--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,13 +5,17 @@
 #    pip-compile requirements-dev.in
 #
 appdirs==1.4.4
-    # via black
+    # via
+    #   black
+    #   virtualenv
 attrs==20.2.0
     # via pytest
 backcall==0.2.0
     # via ipython
 black==20.8b1
     # via -r requirements-dev.in
+cfgv==3.2.0
+    # via pre-commit
 click==7.1.2
     # via
     #   black
@@ -20,12 +24,18 @@ coverage==5.2.1
     # via pytest-cov
 decorator==4.4.2
     # via ipython
+distlib==0.3.1
+    # via virtualenv
 factory-boy==3.0.1
     # via -r requirements-dev.in
 faker==4.1.3
     # via factory-boy
+filelock==3.0.12
+    # via virtualenv
 flake8==3.8.3
     # via -r requirements-dev.in
+identify==2.2.0
+    # via pre-commit
 iniconfig==1.0.1
     # via pytest
 ipython-genutils==0.2.0
@@ -42,6 +52,8 @@ more-itertools==8.5.0
     # via pytest
 mypy-extensions==0.4.3
     # via black
+nodeenv==1.5.0
+    # via pre-commit
 packaging==20.4
     # via pytest
 parso==0.7.1
@@ -58,6 +70,8 @@ pip-tools==6.0.1
     # via -r requirements-dev.in
 pluggy==0.13.1
     # via pytest
+pre-commit==2.11.1
+    # via -r requirements-dev.in
 prompt-toolkit==3.0.7
     # via ipython
 ptyprocess==0.6.0
@@ -83,18 +97,22 @@ pytest==6.0.1
     #   pytest-django
 python-dateutil==2.8.1
     # via faker
+pyyaml==5.4.1
+    # via pre-commit
 regex==2020.7.14
     # via black
 six==1.15.0
     # via
     #   packaging
     #   python-dateutil
+    #   virtualenv
 text-unidecode==1.3
     # via faker
 toml==0.10.1
     # via
     #   black
     #   pep517
+    #   pre-commit
     #   pytest
 traitlets==5.0.3
     # via ipython
@@ -102,6 +120,8 @@ typed-ast==1.4.1
     # via black
 typing-extensions==3.7.4.3
     # via black
+virtualenv==20.4.3
+    # via pre-commit
 wcwidth==0.2.5
     # via prompt-toolkit
 
