--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ on:
 env:
   SECRET_KEY: topsecret123
   DATABASE_URL: postgres://postgres:postgres@localhost/apartment-application
+  LOG_LEVEL: INFO
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
