--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,10 +63,10 @@ jobs:
           flake8
           isort . --check-only --diff
 
-      # - name: Run tests
-      #   run: |
-      #     pytest -ra -vvv --doctest-modules --cov=.
-      #     ./run-type-checks
+      - name: Run tests
+        run: |
+          pytest -ra -vvv --doctest-modules --cov=.
+          ./run-type-checks
 
       - name: Run codecov
         run: codecov
