ASU-481 Remove values from env.example

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,10 @@ ETUOVI_PASSWORD=
 
 # django-oikotie
 OIKOTIE_VENDOR_ID=
+OIKOTIE_COMPANY_NAME=
+OIKOTIE_ENTRYPOINT=
+OIKOTIE_FTP_HOST=
+OIKOTIE_USER=
+OIKOTIE_PASSWORD=
 
 LOG_LEVEL=
