--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ env:
   SECRET_KEY: topsecret123
   DATABASE_URL: postgres://postgres:postgres@localhost/apartment-application
   LOG_LEVEL: INFO
+  OIKOTIE_VENDOR_ID: test
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
