--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,11 +8,11 @@ appdirs==1.4.4
     # via
     #   black
     #   virtualenv
-attrs==20.2.0
+attrs==20.3.0
     # via pytest
 backcall==0.2.0
     # via ipython
-black==20.8b1
+black==21.4b2
     # via -r requirements-dev.in
 cfgv==3.2.0
     # via pre-commit
@@ -20,45 +20,45 @@ click==7.1.2
     # via
     #   black
     #   pip-tools
-coverage==5.2.1
+coverage==5.5
     # via pytest-cov
-decorator==4.4.2
+decorator==5.0.7
     # via ipython
 distlib==0.3.1
     # via virtualenv
-factory-boy==3.0.1
+factory-boy==3.2.0
     # via -r requirements-dev.in
-faker==4.1.3
+faker==8.1.2
     # via factory-boy
 filelock==3.0.12
     # via virtualenv
-flake8==3.8.3
+flake8==3.9.1
     # via -r requirements-dev.in
-identify==2.2.0
+identify==2.2.4
     # via pre-commit
-iniconfig==1.0.1
+iniconfig==1.1.1
     # via pytest
 ipython-genutils==0.2.0
     # via traitlets
-ipython==7.18.1
+ipython==7.23.0
     # via -r requirements-dev.in
-isort==5.5.1
+isort==5.8.0
     # via -r requirements-dev.in
-jedi==0.17.2
+jedi==0.18.0
+    # via ipython
+matplotlib-inline==0.1.2
     # via ipython
 mccabe==0.6.1
     # via flake8
-more-itertools==8.5.0
-    # via pytest
 mypy-extensions==0.4.3
     # via black
-nodeenv==1.5.0
+nodeenv==1.6.0
     # via pre-commit
-packaging==20.4
+packaging==20.9
     # via pytest
-parso==0.7.1
+parso==0.8.2
     # via jedi
-pathspec==0.8.0
+pathspec==0.8.1
     # via black
 pep517==0.10.0
     # via pip-tools
@@ -66,31 +66,31 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==6.0.1
+pip-tools==6.1.0
     # via -r requirements-dev.in
 pluggy==0.13.1
     # via pytest
-pre-commit==2.11.1
+pre-commit==2.12.1
     # via -r requirements-dev.in
-prompt-toolkit==3.0.7
+prompt-toolkit==3.0.18
     # via ipython
-ptyprocess==0.6.0
+ptyprocess==0.7.0
     # via pexpect
 py==1.10.0
     # via pytest
-pycodestyle==2.6.0
+pycodestyle==2.7.0
     # via flake8
-pyflakes==2.2.0
+pyflakes==2.3.1
     # via flake8
-pygments==2.7.4
+pygments==2.9.0
     # via ipython
 pyparsing==2.4.7
     # via packaging
-pytest-cov==2.10.1
+pytest-cov==2.11.1
     # via -r requirements-dev.in
-pytest-django==3.9.0
+pytest-django==4.2.0
     # via -r requirements-dev.in
-pytest==6.0.1
+pytest==6.2.3
     # via
     #   -r requirements-dev.in
     #   pytest-cov
@@ -99,28 +99,25 @@ python-dateutil==2.8.1
     # via faker
 pyyaml==5.4.1
     # via pre-commit
-regex==2020.7.14
+regex==2021.4.4
     # via black
 six==1.15.0
     # via
-    #   packaging
     #   python-dateutil
     #   virtualenv
 text-unidecode==1.3
     # via faker
-toml==0.10.1
+toml==0.10.2
     # via
     #   black
     #   pep517
     #   pre-commit
     #   pytest
-traitlets==5.0.3
-    # via ipython
-typed-ast==1.4.1
-    # via black
-typing-extensions==3.7.4.3
-    # via black
-virtualenv==20.4.3
+traitlets==5.0.5
+    # via
+    #   ipython
+    #   matplotlib-inline
+virtualenv==20.4.4
     # via pre-commit
 wcwidth==0.2.5
     # via prompt-toolkit
