--- a/requirements.in
+++ b/requirements.in
@@ -3,10 +3,12 @@ django-cors-headers
 django-environ
 git+git://github.com/City-of-Helsinki/django-etuovi@develop#egg=django_etuovi  # TODO: change this when released in PyPI
 git+git://github.com/City-of-Helsinki/django-oikotie@develop#egg=django_oikotie  # TODO: change this when released in PyPI
-django-helusers
+django-helusers<0.6.0  # TODO: update to version >=0.6.0
 django-ilmoitin~=0.5.0
 django-simple-history
 djangorestframework
+drf-oidc-auth
+elasticsearch~=7.10.1  # TODO: update to version 7.12
 elasticsearch-dsl>=7.0.0,<8.0.0
 psycopg2
 sentry-sdk
