--- a/requirements.txt
+++ b/requirements.txt
@@ -4,24 +4,29 @@
 #
 #    pip-compile requirements.in
 #
-certifi==2020.6.20
+authlib==0.15.3
+    # via drf-oidc-auth
+certifi==2020.12.5
     # via
     #   elasticsearch
     #   requests
     #   sentry-sdk
-cffi==1.14.3
+cffi==1.14.5
     # via cryptography
-chardet==3.0.4
+chardet==4.0.0
     # via requests
-cryptography==3.3.2
-    # via social-auth-core
-defusedxml==0.6.0
+cryptography==3.4.7
+    # via
+    #   authlib
+    #   drf-oidc-auth
+    #   social-auth-core
+defusedxml==0.7.1
     # via
     #   python3-openid
     #   social-auth-core
-django-anymail==8.1
+django-anymail==8.2
     # via django-ilmoitin
-django-cors-headers==3.5.0
+django-cors-headers==3.7.0
     # via -r requirements.in
 django-environ==0.4.5
     # via -r requirements.in
@@ -29,13 +34,13 @@ django-helusers==0.5.6
     # via -r requirements.in
 django-ilmoitin==0.5.3
     # via -r requirements.in
-django-mailer==2.0.1
+django-mailer==2.1
     # via django-ilmoitin
 django-parler==1.9.2
     # via django-ilmoitin
-django-simple-history==2.12.0
+django-simple-history==3.0.0
     # via -r requirements.in
-django==2.2.20
+django==2.2.21
     # via
     #   -r requirements.in
     #   django-anymail
@@ -51,20 +56,20 @@ git+git://github.com/City-of-Helsinki/django-etuovi@develop#egg=django_etuovi
     # via -r requirements.in
 git+git://github.com/City-of-Helsinki/django-oikotie@develop#egg=django_oikotie
     # via -r requirements.in
-djangorestframework==3.12.1
+djangorestframework==3.12.4
     # via
     #   -r requirements.in
     #   drf-oidc-auth
-drf-oidc-auth==0.10.0
-    # via django-helusers
+drf-oidc-auth==2.0.0
+    # via
+    #   -r requirements.in
+    #   django-helusers
 ecdsa==0.14.1
     # via python-jose
 elasticsearch-dsl==7.3.0
     # via -r requirements.in
-elasticsearch==7.9.1
+elasticsearch==7.10.1
     # via elasticsearch-dsl
-future==0.18.2
-    # via pyjwkest
 idna==2.10
     # via requests
 jinja2==2.11.3
@@ -89,11 +94,7 @@ pyasn1==0.4.8
     #   rsa
 pycparser==2.20
     # via cffi
-pycryptodomex==3.9.8
-    # via pyjwkest
-pyjwkest==1.4.2
-    # via drf-oidc-auth
-pyjwt==1.7.1
+pyjwt==2.1.0
     # via social-auth-core
 python-dateutil==2.8.1
     # via elasticsearch-dsl
@@ -101,40 +102,36 @@ python-jose==3.2.0
     # via django-helusers
 python3-openid==3.2.0
     # via social-auth-core
-pytz==2020.1
+pytz==2021.1
     # via django
 requests-oauthlib==1.3.0
     # via social-auth-core
-requests==2.24.0
+requests==2.25.1
     # via
     #   django-anymail
     #   django-helusers
-    #   pyjwkest
+    #   drf-oidc-auth
     #   requests-oauthlib
     #   social-auth-core
-rsa==4.6
+rsa==4.7.2
     # via python-jose
-sentry-sdk==0.19.0
+sentry-sdk==1.0.0
     # via -r requirements.in
 six==1.15.0
     # via
-    #   cryptography
     #   django-mailer
-    #   django-simple-history
     #   ecdsa
     #   elasticsearch-dsl
-    #   pyjwkest
     #   python-dateutil
     #   python-jose
     #   social-auth-app-django
-    #   social-auth-core
 social-auth-app-django==4.0.0
     # via -r requirements.in
-social-auth-core==3.3.3
+social-auth-core==4.1.0
     # via social-auth-app-django
 sqlparse==0.4.1
     # via django
-urllib3==1.25.10
+urllib3==1.26.4
     # via
     #   elasticsearch
     #   requests
