Add generated XML files to .gitignore
The names of the XML files generated by the Django
management commands have changed. This adds the
new names to .gitignore to avoid committing them
accidentally.

The XML files are named based on the settings
variables ETUOVI_COMPANY_NAME and OIKOTIE_COMPANY_NAME.

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ APARTMENT_INDEX_NAME=asuntotuotanto-apartments
 
 # django-etuovi
 ETUOVI_SUPPLIER_SOURCE_ITEMCODE=
-ETUOVI_COMPANY_NAME=
+ETUOVI_COMPANY_NAME=hkikaupunkiymparisto
 ETUOVI_TRANSFER_ID=
 ETUOVI_FTP_HOST=
 ETUOVI_USER=
@@ -26,7 +26,7 @@ ETUOVI_PASSWORD=
 
 # django-oikotie
 OIKOTIE_VENDOR_ID=
-OIKOTIE_COMPANY_NAME=
+OIKOTIE_COMPANY_NAME=HKI-KYMP
 OIKOTIE_ENTRYPOINT=
 OIKOTIE_FTP_HOST=
 OIKOTIE_USER=
