ASU-702 Move database writing to django commands

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ APARTMENT_DATA_TRANSFER_PATH=transfer_files
 EMAIL_URL=
 MAILER_LOCK_PATH=
 
+ENV=
+LOG_LEVEL=
+
 # django-helusers
 OIDC_AUDIENCE=
 OIDC_API_SCOPE_PREFIX=
