--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ env:
   LOG_LEVEL: INFO
   OIKOTIE_VENDOR_ID: test
   ELASTICSEARCH_VERSION: '7.9.1'
+  ELASTICSEARCH_HOST: localhost
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
