--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
             DATABASE_URL: postgres://apartment-application:apartment-application@apartment-application-db/apartment-application
             DATABASE_HOST: apartment-application-db.helsinki
             ELASTICSEARCH_HOST: apartment-application-elasticsearch.helsinki
+            ELASTICSEARCH_HOST_PORT: 9200
         volumes:
             - .:/app
         ports:
