VSCode: Move format settings to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,9 +7,10 @@
 	"service": "django",
 	"workspaceFolder": "/workspace",
 	"settings": {
+		"editor.formatOnSave": true,
 		"[python]": {
 			"editor.codeActionsOnSave": {
-				"source.organizeImports.python": true
+				"source.organizeImports": true
 			}
 		},
 		"python.formatting.provider": "black",
