--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,8 +18,7 @@
 		"python.linting.pylintEnabled": false,
 		"python.linting.enabled": true,
 		"python.pythonPath": "/usr/local/bin/python",
-		"python.testing.pytestEnabled": true,
-		"terminal.integrated.shell.linux": null
+		"python.testing.pytestEnabled": true
 	},
 	"extensions": [
 		"ms-python.python"
