--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,6 +8,8 @@ appdirs==1.4.4
     # via
     #   black
     #   virtualenv
+astroid==2.5.6
+    # via pylint
 attrs==21.2.0
     # via pytest
 backcall==0.2.0
@@ -43,13 +45,19 @@ ipython-genutils==0.2.0
 ipython==7.24.1
     # via -r requirements-dev.in
 isort==5.8.0
-    # via -r requirements-dev.in
+    # via
+    #   -r requirements-dev.in
+    #   pylint
 jedi==0.18.0
     # via ipython
+lazy-object-proxy==1.6.0
+    # via astroid
 matplotlib-inline==0.1.2
     # via ipython
 mccabe==0.6.1
-    # via flake8
+    # via
+    #   flake8
+    #   pylint
 mypy-extensions==0.4.3
     # via black
 nodeenv==1.6.0
@@ -84,6 +92,14 @@ pyflakes==2.3.1
     # via flake8
 pygments==2.9.0
     # via ipython
+pylint-django==2.4.4
+    # via -r requirements-dev.in
+pylint-plugin-utils==0.6
+    # via pylint-django
+pylint==2.8.2
+    # via
+    #   pylint-django
+    #   pylint-plugin-utils
 pyparsing==2.4.7
     # via packaging
 pytest-cov==2.12.1
@@ -112,6 +128,7 @@ toml==0.10.2
     #   black
     #   pep517
     #   pre-commit
+    #   pylint
     #   pytest
     #   pytest-cov
 traitlets==5.0.5
@@ -122,6 +139,8 @@ virtualenv==20.4.7
     # via pre-commit
 wcwidth==0.2.5
     # via prompt-toolkit
+wrapt==1.12.1
+    # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
