VSCode: Install pre-commit in devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,5 +29,6 @@
 		"ms-python.python"
 	],
 	"shutdownAction": "none",
-	"remoteUser": "appuser"
+	"remoteUser": "appuser",
+	"postCreateCommand": "pre-commit install --install-hooks"
 }
