VSCode: Insert newline to end of file

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
 	"workspaceFolder": "/workspace",
 	"settings": {
 		"editor.formatOnSave": true,
+		"files.insertFinalNewline": true,
 		"[python]": {
 			"editor.codeActionsOnSave": {
 				"source.organizeImports": true
