ASU-727 Add data transfer folder creation
Add data transfer folder creation to docker-entrypoint
script.
Make function which writes to folder check that the folder exists.
Add environment variable for generated XML files. Fix accordinly
gitignore and tests.

--- a/.gitignore
+++ b/.gitignore
@@ -140,7 +140,4 @@ dmypy.json
 *.code-workspace
 
 # test XML files
-APTHKI-KYMP*.xml
-hkikaupunkiymparisto*.xml
-HOUSINGCOMPANYHKI-KYMP*.xml
-UPDATE*.xml
+transfer_files/*
