--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 DEBUG=1
 APPLY_MIGRATIONS=1
 CREATE_SUPERUSER=1
+CREATE_DATA_TRANSFER_PATH=1
+
+APARTMENT_DATA_TRANSFER_PATH=
 
 EMAIL_URL=
 MAILER_LOCK_PATH=
@@ -38,3 +41,5 @@ OIKOTIE_PASSWORD=
 LOG_LEVEL=ERROR
 DJANGO_LOG_LEVEL=ERROR
 APPS_LOG_LEVEL=INFO
+
+APARTMENT_DATA_TRANSFER_PATH=
