--- a/requirements.in
+++ b/requirements.in
@@ -8,6 +8,7 @@ django-ilmoitin~=0.5.0
 django-simple-history
 djangorestframework
 drf-oidc-auth
+drf-spectacular
 elasticsearch~=7.10.1  # TODO: update to version 7.12
 elasticsearch-dsl>=7.0.0,<8.0.0
 psycopg2
