--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.in
 #
+attrs==21.2.0
+    # via jsonschema
 authlib==0.15.3
     # via drf-oidc-auth
 certifi==2020.12.5
@@ -52,6 +54,7 @@ django==2.2.21
     #   django-oikotie
     #   djangorestframework
     #   drf-oidc-auth
+    #   drf-spectacular
 git+git://github.com/City-of-Helsinki/django-etuovi@develop#egg=django_etuovi
     # via -r requirements.in
 git+git://github.com/City-of-Helsinki/django-oikotie@develop#egg=django_oikotie
@@ -60,20 +63,29 @@ djangorestframework==3.12.4
     # via
     #   -r requirements.in
     #   drf-oidc-auth
+    #   drf-spectacular
 drf-oidc-auth==2.0.0
     # via
     #   -r requirements.in
     #   django-helusers
+drf-spectacular==0.16.0
+    # via -r requirements.in
 ecdsa==0.14.1
     # via python-jose
 elasticsearch-dsl==7.3.0
     # via -r requirements.in
 elasticsearch==7.10.1
-    # via elasticsearch-dsl
+    # via
+    #   -r requirements.in
+    #   elasticsearch-dsl
 idna==2.10
     # via requests
+inflection==0.5.1
+    # via drf-spectacular
 jinja2==2.11.3
     # via django-ilmoitin
+jsonschema==3.2.0
+    # via drf-spectacular
 lockfile==0.12.2
     # via django-mailer
 lxml==4.6.3
@@ -96,6 +108,8 @@ pycparser==2.20
     # via cffi
 pyjwt==2.1.0
     # via social-auth-core
+pyrsistent==0.17.3
+    # via jsonschema
 python-dateutil==2.8.1
     # via elasticsearch-dsl
 python-jose==3.2.0
@@ -104,6 +118,8 @@ python3-openid==3.2.0
     # via social-auth-core
 pytz==2021.1
     # via django
+pyyaml==5.4.1
+    # via drf-spectacular
 requests-oauthlib==1.3.0
     # via social-auth-core
 requests==2.25.1
@@ -122,6 +138,7 @@ six==1.15.0
     #   django-mailer
     #   ecdsa
     #   elasticsearch-dsl
+    #   jsonschema
     #   python-dateutil
     #   python-jose
     #   social-auth-app-django
@@ -131,8 +148,13 @@ social-auth-core==4.1.0
     # via social-auth-app-django
 sqlparse==0.4.1
     # via django
+uritemplate==3.0.1
+    # via drf-spectacular
 urllib3==1.26.4
     # via
     #   elasticsearch
     #   requests
     #   sentry-sdk
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
