--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ django-anymail==8.2
     # via django-ilmoitin
 django-cors-headers==3.7.0
     # via -r requirements.in
+django-enumfields==2.1.1
+    # via -r requirements.in
 django-environ==0.4.5
     # via -r requirements.in
 django-helusers==0.5.6
