Configure loggers and log levels

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,8 @@ SOCIAL_AUTH_TUNNISTAMO_KEY=
 SOCIAL_AUTH_TUNNISTAMO_SECRET=
 SOCIAL_AUTH_TUNNISTAMO_OIDC_ENDPOINT=
 
-ELASTICSEARCH_URL=http://apartment-application-elasticsearch:9200
+ELASTICSEARCH_URL=http://apartment-application-elasticsearch
+ELASTICSEARCH_PORT=9200
 APARTMENT_INDEX_NAME=asuntotuotanto-apartments
 
 # django-etuovi
@@ -34,4 +35,6 @@ OIKOTIE_FTP_HOST=
 OIKOTIE_USER=
 OIKOTIE_PASSWORD=
 
-LOG_LEVEL=
+LOG_LEVEL=ERROR
+DJANGO_LOG_LEVEL=ERROR
+APPS_LOG_LEVEL=INFO
