ASU-793 Add whitenoise for OpenShift enviroments
With a couple of lines of config WhiteNoise allows your web app to serve
its own static files, making it a self-contained unit that can be
deployed anywhere without relying on nginx, Amazon S3 or any other
external service. (Especially useful on Heroku, OpenShift and other PaaS
providers.)

Refs ASU-793

--- a/requirements.txt
+++ b/requirements.txt
@@ -155,6 +155,8 @@ urllib3==1.26.4
     #   elasticsearch
     #   requests
     #   sentry-sdk
+whitenoise==5.2.0
+    # via -r requirements.in
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
