--- a/requirements.in
+++ b/requirements.in
@@ -9,10 +9,12 @@ django-helusers<0.6.0  # TODO: update to version >=0.6.0
 django-ilmoitin~=0.5.0
 django-simple-history
 djangorestframework
+djangorestframework-simplejwt
 drf-oidc-auth
 drf-spectacular
 elasticsearch~=7.10.1  # TODO: update to version 7.12
 elasticsearch-dsl>=7.0.0,<8.0.0
+hashids
 psycopg2
 sentry-sdk
 social-auth-app-django
