--- a/requirements.txt
+++ b/requirements.txt
@@ -55,15 +55,19 @@ django==2.2.21
     #   django-mailer
     #   django-oikotie
     #   djangorestframework
+    #   djangorestframework-simplejwt
     #   drf-oidc-auth
     #   drf-spectacular
 git+git://github.com/City-of-Helsinki/django-etuovi@develop#egg=django_etuovi
     # via -r requirements.in
 git+git://github.com/City-of-Helsinki/django-oikotie@develop#egg=django_oikotie
     # via -r requirements.in
+djangorestframework-simplejwt==4.7.0
+    # via -r requirements.in
 djangorestframework==3.12.4
     # via
     #   -r requirements.in
+    #   djangorestframework-simplejwt
     #   drf-oidc-auth
     #   drf-spectacular
 drf-oidc-auth==2.0.0
@@ -80,6 +84,8 @@ elasticsearch==7.10.1
     # via
     #   -r requirements.in
     #   elasticsearch-dsl
+hashids==1.3.1
+    # via -r requirements.in
 idna==2.10
     # via requests
 inflection==0.5.1
@@ -109,7 +115,9 @@ pyasn1==0.4.8
 pycparser==2.20
     # via cffi
 pyjwt==2.1.0
-    # via social-auth-core
+    # via
+    #   djangorestframework-simplejwt
+    #   social-auth-core
 pyrsistent==0.17.3
     # via jsonschema
 python-dateutil==2.8.1
