--- a/azure-pipelines-master.yml
+++ b/azure-pipelines-master.yml
@@ -1,11 +1,11 @@
 # File: apartment-application-service/azure-pipelines-master.yml
 
-# Continuous integration (CI) triggers cause a pipeline to run whenever you push 
+# Continuous integration (CI) triggers cause a pipeline to run whenever you push
 # an update to the specified branches or you push specified tags.
 trigger:
   branches:
     include:
-    - master
+    - develop
   paths:
     exclude:
     - README.md
