Add http_auth to ES connection
HTTP authentication is required for a security reasons.

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ SOCIAL_AUTH_TUNNISTAMO_OIDC_ENDPOINT=
 
 ELASTICSEARCH_URL=http://apartment-application-elasticsearch
 ELASTICSEARCH_PORT=9200
+ELASTICSEARCH_USERNAME=
+ELASTICSEARCH_PASSWORD=
 APARTMENT_INDEX_NAME=asuntotuotanto-apartments
 
 # django-etuovi
