--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,35 +12,35 @@ attrs==21.2.0
     # via pytest
 backcall==0.2.0
     # via ipython
-black==21.4b2
+black==21.5b2
     # via -r requirements-dev.in
-cfgv==3.2.0
+cfgv==3.3.0
     # via pre-commit
-click==7.1.2
+click==8.0.1
     # via
     #   black
     #   pip-tools
 coverage==5.5
     # via pytest-cov
-decorator==5.0.7
+decorator==5.0.9
     # via ipython
-distlib==0.3.1
+distlib==0.3.2
     # via virtualenv
 factory-boy==3.2.0
     # via -r requirements-dev.in
-faker==8.1.2
+faker==8.6.0
     # via factory-boy
 filelock==3.0.12
     # via virtualenv
-flake8==3.9.1
+flake8==3.9.2
     # via -r requirements-dev.in
-identify==2.2.4
+identify==2.2.10
     # via pre-commit
 iniconfig==1.1.1
     # via pytest
 ipython-genutils==0.2.0
     # via traitlets
-ipython==7.23.0
+ipython==7.24.1
     # via -r requirements-dev.in
 isort==5.8.0
     # via -r requirements-dev.in
@@ -70,7 +70,7 @@ pip-tools==6.1.0
     # via -r requirements-dev.in
 pluggy==0.13.1
     # via pytest
-pre-commit==2.12.1
+pre-commit==2.13.0
     # via -r requirements-dev.in
 prompt-toolkit==3.0.18
     # via ipython
@@ -86,11 +86,11 @@ pygments==2.9.0
     # via ipython
 pyparsing==2.4.7
     # via packaging
-pytest-cov==2.11.1
+pytest-cov==2.12.1
     # via -r requirements-dev.in
-pytest-django==4.2.0
+pytest-django==4.4.0
     # via -r requirements-dev.in
-pytest==6.2.3
+pytest==6.2.4
     # via
     #   -r requirements-dev.in
     #   pytest-cov
@@ -101,7 +101,7 @@ pyyaml==5.4.1
     # via pre-commit
 regex==2021.4.4
     # via black
-six==1.15.0
+six==1.16.0
     # via
     #   python-dateutil
     #   virtualenv
@@ -113,11 +113,12 @@ toml==0.10.2
     #   pep517
     #   pre-commit
     #   pytest
+    #   pytest-cov
 traitlets==5.0.5
     # via
     #   ipython
     #   matplotlib-inline
-virtualenv==20.4.4
+virtualenv==20.4.7
     # via pre-commit
 wcwidth==0.2.5
     # via prompt-toolkit
