--- a/requirements.in
+++ b/requirements.in
@@ -7,6 +7,7 @@ git+git://github.com/City-of-Helsinki/django-etuovi@develop#egg=django_etuovi  #
 git+git://github.com/City-of-Helsinki/django-oikotie@develop#egg=django_oikotie  # TODO: change this when released in PyPI
 django-helusers<0.6.0  # TODO: update to version >=0.6.0
 django-ilmoitin~=0.5.0
+django-pgcrypto-fields
 django-simple-history
 djangorestframework
 djangorestframework-simplejwt
