ASU-884 Add encryption keypair to workflow for tests
This keypair is only used for running the tests and should not be
used in production.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,63 @@ env:
   OIKOTIE_VENDOR_ID: test
   ELASTICSEARCH_VERSION: '7.9.1'
   ELASTICSEARCH_HOST: localhost
+  PUBLIC_PGP_KEY: |
+    -----BEGIN PGP PUBLIC KEY BLOCK-----
+
+    mQGiBGDJ7egRBACtiOeDD28VV1rViZ0ondhlGdnfEDqgsuGnUPywfDb8h5B9bHxQ
+    cQj8NuygD9wBInx/H5eO4UkfBjQaUIaWBUSWiynyPfcicOdPOqEFiyliEmB3daqf
+    H74Tt9dMOaHj43rXal3URKtgiFa/foGa2H5oAXQMtLg8xOrFB/x/BiuBVwCg4dD9
+    eh/NKo1mSpD6BH3CGlCwdzkD/Re9dmg9lL0K1b+JCjzQ4xF5XzzfMX0dtW9zJbTj
+    pCjmIrv86FO1wWZq17pMvMStcu08slkMHa8XkIfslN+3CnMDKhBABBDakatKxfu+
+    5Ka7EQK0PAyGeG8qdqzrOBP97/ws91ymsgkQeBfYNPncbLTbIsI9N2dBUsL5XmoD
+    /ztzA/0VNNsp3jOD5OfPJ9IqW5WoCQgz0aX1zzzhwwR4MMVXwkXMenS+aVKOhVqu
+    e2xtA+ueYoR96oZzI/CzSS8/+li8WY5nnNbGRaYeQDtdkrmsMSnUGhfohZE/+S7J
+    PD4W+KEjYVHee9lpWngzQ5OL8QiwDT+CFeb+ExoBtLf7lLKnEbSMQXBhcnRtZW50
+    IEFwcGxpY2F0aW9uIFNlcnZpY2UgKFRlc3Qga2V5IGZvciBhcGFydG1lbnQgYXBw
+    bGljYXRpb24gc2VydmljZS4gTm90IGZvciBwcm9kdWN0aW9uIHVzZSEpIDxhcGFy
+    dG1lbnRfYXBwbGljYXRpb25fc2VydmljZUBoZWxzaW5raT6IfAQTEQIAPBYhBADC
+    erfH00QwdNYDkE4ComjeRsaUBQJgye3oAhsDBQsJCAcCAyICAQYVCgkICwIEFgID
+    AQIeBwIXgAAKCRBOAqJo3kbGlBQiAJwNdjAua7cpuV3f2qHXTDewO4hQDQCgtKiN
+    QnGOKTK4V36ZkjfcbuPQL2K5AQwEYMnt6BAEAJS4fy4zxq7PxJHE5eICfykvgJ3j
+    hw4IwHdHpoCbqc5Tjd7f14u8OWWCXhQJ8lcPPeeuEzNPqeRIefd6Y/XlBl+NoJCE
+    oiGaCh29PhN2G5MnVsUJjXOr7dZXjKucmHkiG1EZP1Ef98n/Z5CxeDcXqNuSow+Q
+    zTc8Q3fgTlNwaoDPAAMFA/dXidxWhIUpRCCBOK2tD5y2GGvum7sttfiLlJuK1ep4
+    5TZsfvxSDE941iXGmG3M+FcABQdqUrh0M9r/IW+i5B9MyKu/SQeBb7HnhVJSe27l
+    TxP9CHmOb2GtrvwkXjUn8/Vn1A36p8seEXIt+AKjEVktrMOtqlz51ZncijThL7y6
+    iGAEGBECACAWIQQAwnq3x9NEMHTWA5BOAqJo3kbGlAUCYMnt6AIbDAAKCRBOAqJo
+    3kbGlDPeAJ9zGF5H44WpF8P8FqA3rhHKaKT+XgCfQFgR78yp9qzhShwbKdpjcowW
+    vMc=
+    =WxtF
+    -----END PGP PUBLIC KEY BLOCK-----
+  PRIVATE_PGP_KEY: |
+    -----BEGIN PGP PRIVATE KEY BLOCK-----
+
+    lQG7BGDJ7egRBACtiOeDD28VV1rViZ0ondhlGdnfEDqgsuGnUPywfDb8h5B9bHxQ
+    cQj8NuygD9wBInx/H5eO4UkfBjQaUIaWBUSWiynyPfcicOdPOqEFiyliEmB3daqf
+    H74Tt9dMOaHj43rXal3URKtgiFa/foGa2H5oAXQMtLg8xOrFB/x/BiuBVwCg4dD9
+    eh/NKo1mSpD6BH3CGlCwdzkD/Re9dmg9lL0K1b+JCjzQ4xF5XzzfMX0dtW9zJbTj
+    pCjmIrv86FO1wWZq17pMvMStcu08slkMHa8XkIfslN+3CnMDKhBABBDakatKxfu+
+    5Ka7EQK0PAyGeG8qdqzrOBP97/ws91ymsgkQeBfYNPncbLTbIsI9N2dBUsL5XmoD
+    /ztzA/0VNNsp3jOD5OfPJ9IqW5WoCQgz0aX1zzzhwwR4MMVXwkXMenS+aVKOhVqu
+    e2xtA+ueYoR96oZzI/CzSS8/+li8WY5nnNbGRaYeQDtdkrmsMSnUGhfohZE/+S7J
+    PD4W+KEjYVHee9lpWngzQ5OL8QiwDT+CFeb+ExoBtLf7lLKnEQAAoKyc8fSyfvsN
+    lW+Q1V4d2k8x1wPfC/y0jEFwYXJ0bWVudCBBcHBsaWNhdGlvbiBTZXJ2aWNlIChU
+    ZXN0IGtleSBmb3IgYXBhcnRtZW50IGFwcGxpY2F0aW9uIHNlcnZpY2UuIE5vdCBm
+    b3IgcHJvZHVjdGlvbiB1c2UhKSA8YXBhcnRtZW50X2FwcGxpY2F0aW9uX3NlcnZp
+    Y2VAaGVsc2lua2k+iHwEExECADwWIQQAwnq3x9NEMHTWA5BOAqJo3kbGlAUCYMnt
+    6AIbAwULCQgHAgMiAgEGFQoJCAsCBBYCAwECHgcCF4AACgkQTgKiaN5GxpQUIgCc
+    DXYwLmu3Kbld39qh10w3sDuIUA0AoLSojUJxjikyuFd+mZI33G7j0C9inQExBGDJ
+    7egQBACUuH8uM8auz8SRxOXiAn8pL4Cd44cOCMB3R6aAm6nOU43e39eLvDllgl4U
+    CfJXDz3nrhMzT6nkSHn3emP15QZfjaCQhKIhmgodvT4TdhuTJ1bFCY1zq+3WV4yr
+    nJh5IhtRGT9RH/fJ/2eQsXg3F6jbkqMPkM03PEN34E5TcGqAzwADBQP3V4ncVoSF
+    KUQggTitrQ+cthhr7pu7LbX4i5SbitXqeOU2bH78UgxPeNYlxphtzPhXAAUHalK4
+    dDPa/yFvouQfTMirv0kHgW+x54VSUntu5U8T/Qh5jm9hra78JF41J/P1Z9QN+qfL
+    HhFyLfgCoxFZLazDrapc+dWZ3Io04S+8ugAA+gP5E4f6C5Jhj/ocVoNf/0nZi7/4
+    1a4K2OCfvt7OUkRkExCIYAQYEQIAIBYhBADCerfH00QwdNYDkE4ComjeRsaUBQJg
+    ye3oAhsMAAoJEE4ComjeRsaUM94An3MYXkfjhakXw/wWoDeuEcpopP5eAJ9AWBHv
+    zKn2rOFKHBsp2mNyjBa8xw==
+    =OOZq
+    -----END PGP PRIVATE KEY BLOCK-----
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
