Set default email url env to consolemail
If the default is empty string it will cause a fresh startup to fail with an error
that no schema is found by django-environ leading to the application crashing
on startup.

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ CREATE_DATA_TRANSFER_PATH=1
 
 APARTMENT_DATA_TRANSFER_PATH=transfer_files
 
-EMAIL_URL=
+EMAIL_URL=consolemail://
 MAILER_LOCK_PATH=
 
 # django-helusers
