--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -3,9 +3,11 @@ factory-boy
 flake8
 ipython
 isort
+packaging==21.0
 pip-tools
 pre-commit
 pylint-django
 pytest
 pytest-cov
 pytest-django
+python-dateutil==2.8.2
