--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -62,8 +62,10 @@ mypy-extensions==0.4.3
     # via black
 nodeenv==1.6.0
     # via pre-commit
-packaging==20.9
-    # via pytest
+packaging==21.0
+    # via
+    #   -r requirements-dev.in
+    #   pytest
 parso==0.8.2
     # via jedi
 pathspec==0.8.1
@@ -111,8 +113,10 @@ pytest==6.2.4
     #   -r requirements-dev.in
     #   pytest-cov
     #   pytest-django
-python-dateutil==2.8.1
-    # via faker
+python-dateutil==2.8.2
+    # via
+    #   -r requirements-dev.in
+    #   faker
 pyyaml==5.4.1
     # via pre-commit
 regex==2021.4.4
