--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,24 @@
 #
 #    pip-compile requirements.in
 #
+asgiref==3.4.1
+    # via django
 attrs==21.2.0
     # via jsonschema
 authlib==0.15.4
     # via drf-oidc-auth
+cachetools==4.2.2
+    # via django-helusers
 certifi==2021.5.30
     # via
     #   elasticsearch
     #   requests
     #   sentry-sdk
-cffi==1.14.5
+cffi==1.14.6
     # via cryptography
-chardet==4.0.0
+charset-normalizer==2.0.4
     # via requests
-cryptography==3.4.7
+cryptography==3.4.8
     # via
     #   authlib
     #   drf-oidc-auth
@@ -26,7 +30,9 @@ defusedxml==0.7.1
     # via
     #   python3-openid
     #   social-auth-core
-django-anymail==8.3
+deprecation==2.1.0
+    # via django-helusers
+django-anymail==8.4
     # via django-ilmoitin
 django-cors-headers==3.7.0
     # via -r requirements.in
@@ -34,19 +40,19 @@ django-enumfields==2.1.1
     # via -r requirements.in
 django-environ==0.4.5
     # via -r requirements.in
-django-helusers==0.5.6
+django-helusers==0.7.0
     # via -r requirements.in
-django-ilmoitin==0.5.3
+django-ilmoitin==0.6.0
     # via -r requirements.in
 django-mailer==2.1
     # via django-ilmoitin
-django-parler==1.9.2
+django-parler==2.2
     # via django-ilmoitin
 django-pgcrypto-fields==2.6.0
     # via -r requirements.in
 django-simple-history==3.0.0
     # via -r requirements.in
-django==2.2.24
+django==3.2.6
     # via
     #   -r requirements.in
     #   django-anymail
@@ -60,11 +66,11 @@ django==2.2.24
     #   djangorestframework-simplejwt
     #   drf-oidc-auth
     #   drf-spectacular
-git+git://github.com/City-of-Helsinki/django-etuovi@v0.1.1#egg=django_etuovi
+git+git://github.com/City-of-Helsinki/django-etuovi@v0.2.0#egg=django_etuovi
     # via -r requirements.in
-git+git://github.com/City-of-Helsinki/django-oikotie@v0.1.1#egg=django_oikotie
+git+git://github.com/City-of-Helsinki/django-oikotie@v0.2.0#egg=django_oikotie
     # via -r requirements.in
-djangorestframework-simplejwt==4.7.1
+djangorestframework-simplejwt==4.7.2
     # via -r requirements.in
 djangorestframework==3.12.4
     # via
@@ -73,22 +79,20 @@ djangorestframework==3.12.4
     #   drf-oidc-auth
     #   drf-spectacular
 drf-oidc-auth==2.0.0
-    # via
-    #   -r requirements.in
-    #   django-helusers
-drf-spectacular==0.17.0
+    # via -r requirements.in
+drf-spectacular==0.18.2
     # via -r requirements.in
 ecdsa==0.17.0
     # via python-jose
-elasticsearch-dsl==7.3.0
+elasticsearch-dsl==7.4.0
     # via -r requirements.in
-elasticsearch==7.10.1
+elasticsearch==7.14.0
     # via
     #   -r requirements.in
     #   elasticsearch-dsl
 hashids==1.3.1
     # via -r requirements.in
-idna==2.10
+idna==3.2
     # via requests
 inflection==0.5.1
     # via drf-spectacular
@@ -108,7 +112,9 @@ oauthlib==3.1.1
     # via
     #   requests-oauthlib
     #   social-auth-core
-psycopg2==2.8.6
+packaging==21.0
+    # via deprecation
+psycopg2==2.9.1
     # via -r requirements.in
 pyasn1==0.4.8
     # via
@@ -120,9 +126,11 @@ pyjwt==2.1.0
     # via
     #   djangorestframework-simplejwt
     #   social-auth-core
-pyrsistent==0.17.3
+pyparsing==2.4.7
+    # via packaging
+pyrsistent==0.18.0
     # via jsonschema
-python-dateutil==2.8.1
+python-dateutil==2.8.2
     # via elasticsearch-dsl
 python-jose==3.3.0
     # via django-helusers
@@ -134,7 +142,7 @@ pyyaml==5.4.1
     # via drf-spectacular
 requests-oauthlib==1.3.0
     # via social-auth-core
-requests==2.25.1
+requests==2.26.0
     # via
     #   django-anymail
     #   django-helusers
@@ -143,7 +151,7 @@ requests==2.25.1
     #   social-auth-core
 rsa==4.7.2
     # via python-jose
-sentry-sdk==1.1.0
+sentry-sdk==1.3.1
     # via -r requirements.in
 six==1.16.0
     # via
@@ -152,8 +160,7 @@ six==1.16.0
     #   elasticsearch-dsl
     #   jsonschema
     #   python-dateutil
-    #   social-auth-app-django
-social-auth-app-django==4.0.0
+social-auth-app-django==5.0.0
     # via -r requirements.in
 social-auth-core==4.1.0
     # via social-auth-app-django
@@ -161,12 +168,12 @@ sqlparse==0.4.1
     # via django
 uritemplate==3.0.1
     # via drf-spectacular
-urllib3==1.26.5
+urllib3==1.26.6
     # via
     #   elasticsearch
     #   requests
     #   sentry-sdk
-whitenoise==5.2.0
+whitenoise==5.3.0
     # via -r requirements.in
 
 # The following packages are considered to be unsafe in a requirements file:
