Add git input validation to VSCode

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
 	"workspaceFolder": "/workspace",
 	"settings": {
 		"editor.formatOnSave": true,
+		"git.inputValidation": "always",
 		"files.insertFinalNewline": true,
 		"[python]": {
 			"editor.codeActionsOnSave": {
