Fix: Test requires OIKOTIE_VENDOR_ID

--- a/.env.example
+++ b/.env.example
@@ -33,7 +33,7 @@ ETUOVI_USER=
 ETUOVI_PASSWORD=
 
 # django-oikotie
-OIKOTIE_VENDOR_ID=
+OIKOTIE_VENDOR_ID=TEST
 OIKOTIE_COMPANY_NAME=HKI-KYMP
 OIKOTIE_ENTRYPOINT=
 OIKOTIE_FTP_HOST=
