VSCode: Add gitlens for vscode editor

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,8 @@
 	},
 	"extensions": [
 		"ms-python.python",
-		"ms-python.vscode-pylance"
+		"ms-python.vscode-pylance",
+		"eamodio.gitlens"
 	],
 	"shutdownAction": "none",
 	"remoteUser": "appuser",
