--- a/.env.example
+++ b/.env.example
@@ -11,12 +11,16 @@ MAILER_LOCK_PATH=
 # django-helusers
 OIDC_AUDIENCE=
 OIDC_API_SCOPE_PREFIX=
+OIDC_API_AUTHORIZATION_FIELD=
 OIDC_REQUIRE_API_SCOPE_FOR_AUTHENTICATION=False
 OIDC_ISSUER=
 
 SOCIAL_AUTH_TUNNISTAMO_KEY=
 SOCIAL_AUTH_TUNNISTAMO_SECRET=
 SOCIAL_AUTH_TUNNISTAMO_OIDC_ENDPOINT=
+
+HELUSERS_BACK_CHANNEL_LOGOUT_ENABLED=False
+HELSINKI_PROFILE_API_URL=
 
 ELASTICSEARCH_URL=http://apartment-application-elasticsearch
 ELASTICSEARCH_PORT=9200
