--- a/requirements.in
+++ b/requirements.in
@@ -15,6 +15,7 @@ elasticsearch~=7.14.0
 elasticsearch-dsl>=7.0.0,<8.0.0
 hashids~=1.3.1
 psycopg2~=2.9.1
+python-stdnum~=1.17
 sentry-sdk~=1.3.0
 social-auth-app-django~=5.0.0
 whitenoise~=5.3.0
