--- a/requirements.txt
+++ b/requirements.txt
@@ -117,6 +117,8 @@ python-dateutil==2.8.2
     # via elasticsearch-dsl
 python-jose==3.3.0
     # via django-helusers
+python-stdnum==1.17
+    # via -r requirements.in
 python3-openid==3.2.0
     # via social-auth-core
 pytz==2021.1
