Add elastisearch settings to github actions
In the test have used two different way to set elasticsearch
settings. Some uses HOST and others URL so both has enabled now on the
github actions.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ env:
   OIKOTIE_VENDOR_ID: test
   ELASTICSEARCH_VERSION: '7.9.1'
   ELASTICSEARCH_HOST: localhost
+  ELASTICSEARCH_URL: http://localhost
+  APARTMENT_INDEX_NAME: test-apartment
   PUBLIC_PGP_KEY: |
     -----BEGIN PGP PUBLIC KEY BLOCK-----
 
