--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,2 +1,3 @@
 sonar.exclusions=**/migrations/**/*, **/tests/**/*
 sonar.projectKey=City-of-Helsinki_apartment-application-service
+sonar.python.version=3
