Require authentication in sales API

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,10 @@ EMAIL_URL=consolemail://
 MAILER_LOCK_PATH=
 
 # django-helusers
-OIDC_AUDIENCE=
+OIDC_AUDIENCE=https://api.hel.fi/auth/asuntotuotantoapidev
 OIDC_API_SCOPE_PREFIX=
 OIDC_REQUIRE_API_SCOPE_FOR_AUTHENTICATION=False
-OIDC_ISSUER=
+OIDC_ISSUER=https://tunnistamo.test.hel.ninja/openid
 
 SOCIAL_AUTH_TUNNISTAMO_KEY=
 SOCIAL_AUTH_TUNNISTAMO_SECRET=
