HASO PDF: Add tests for HASO contract PDF generation
Refs ASU-1642

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,6 +110,9 @@ jobs:
       - name: psycopg2 prerequisites
         run: sudo apt-get install libpq-dev
 
+      - name: Install poppler-utils for pdftotext  # used in tests
+        run: sudo apt-get install poppler-utils
+
       - name: Install dependencies
         run: |
           pip install -U pip
