pytest settings: Add -ra flag
Add "-ra" as default flag for pytest runs to make sure that warnings are
visible in the test run summary output.

Also remove the pytest.ini and move the DJANGO_SETTINGS_MODULE setting
from it to the setup.cfg, which has other pytest settings, because
otherwise the other pytest settings in setup.cfg won't be effective.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,11 @@ max-line-length = 88
 max-complexity = 10
 
 [tool:pytest]
-DJANGO_SETTINGS_MODULE = apartment_application_service.settings
+DJANGO_SETTINGS_MODULE = apartment_application_service.tests.settings
 norecursedirs = node_modules .git venv*
 doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE
+addopts =
+    -ra
 
 [coverage:run]
 branch = True
