Fix isort config and resort imports
Fix the isort configuration is setup.cfg and run "isort ." to resort all
imports.

There was a problem with the previous configuration which caused
standard library modules to be classified as thirdparty modules and that
messed up the import grouping.  Fix the configuration by removing
overrides of the standard library modules in setup.cfg with the
"known_standard_library" setting.  Also remove the unneeded
"known_first_party" setting.

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,9 +14,7 @@ addopts =
 branch = True
 omit = *migrations*,*site-packages*,*venv*,*tests*
 
-[isort]
-known_first_party=apartment_application_service
-known_standard_library=token,tokenize,enum,importlib
+[tool:isort]
 default_section = THIRDPARTY
 atomic=true
 combine_as_imports=false
