requirements: Update drf-spectacular
Update drf-spectacular library to newer version to get rid of the
following warning from Django:

    RemovedInDjango41Warning: 'drf_spectacular' defines
    default_app_config = 'drf_spectacular.apps.SpectacularConfig'.
    Django now detects this configuration automatically. You can remove
    default_app_config.

--- a/requirements.in
+++ b/requirements.in
@@ -10,7 +10,7 @@ django-simple-history~=3.0.0
 djangorestframework~=3.12.4
 djangorestframework-simplejwt~=4.7.1
 drf-oidc-auth~=2.0.0
-drf-spectacular~=0.18.2
+drf-spectacular
 elasticsearch~=7.14.0
 elasticsearch-dsl>=7.0.0,<8.0.0
 Faker~=8.6.0
