--- a/requirements.txt
+++ b/requirements.txt
@@ -57,11 +57,11 @@ django-enumfields==2.1.1
     # via -r requirements.in
 django-environ==0.4.5
     # via -r requirements.in
-django-etuovi @ git+https://github.com/City-of-Helsinki/django-etuovi@v0.2.0
+django-etuovi==0.2.1
     # via -r requirements.in
 django-helusers==0.7.0
     # via -r requirements.in
-django-oikotie @ git+https://github.com/City-of-Helsinki/django-oikotie@v0.2.0
+django-oikotie==0.2.1
     # via -r requirements.in
 django-pgcrypto-fields @ git+https://github.com/incuna/django-pgcrypto-fields@5b4b8eed3f9636ba3331f26e41a639fe4bee9247
     # via -r requirements.in
