--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -5,7 +5,6 @@ factory-boy
 flake8
 ipython
 isort
-packaging==21.0
 pip-tools
 pre-commit
 pylint-django
@@ -13,5 +12,5 @@ pytest
 pytest-cov
 pytest-django
 pytest-sugar
-python-dateutil==2.8.2
+python-dateutil
 pytest-freezegun
