requirements*: Update Django etc.
Update Django from 3.2 to 4.2, DRF from 3.12 to 3.14, etc.

--- a/requirements.in
+++ b/requirements.in
@@ -1,25 +1,25 @@
-Django~=3.2.15
-django-cors-headers~=3.7.0
-django-enumfields~=2.1.1
+Django
+django-cors-headers
+django-enumfields
 django-environ
 django-etuovi
 django-oikotie
-django-helusers~=0.7.0
+django-helusers
 git+https://github.com/incuna/django-pgcrypto-fields@5b4b8eed3f9636ba3331f26e41a639fe4bee9247#egg=django-pgcrypto-fields
-django-simple-history~=3.0.0
-djangorestframework~=3.12.4
+django-simple-history
+djangorestframework
 djangorestframework-simplejwt
-drf-oidc-auth~=2.0.0
+drf-oidc-auth
 drf-spectacular
 elasticsearch~=7.14.0
 elasticsearch-dsl>=7.0.0,<8.0.0
 Faker~=8.6.0
 hashids~=1.3.1
-psycopg2~=2.9.1
-python-stdnum~=1.17
+psycopg2
+python-stdnum
 sentry-sdk
-social-auth-app-django~=5.0.0
-whitenoise~=5.3.0
+social-auth-app-django
+whitenoise
 pikepdf
-num2words~=0.5.10
-paramiko~=2.10.3
+num2words
+paramiko
