Enable OIDC back channel logout endpoint

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ OIDC_AUDIENCE=asuntotuotanto-api-dev
 OIDC_API_SCOPE_PREFIX=
 OIDC_REQUIRE_API_SCOPE_FOR_AUTHENTICATION=False
 OIDC_ISSUER=https://tunnistus.test.hel.ninja/auth/realms/helsinki-tunnistus
+HELUSERS_BACK_CHANNEL_LOGOUT_ENABLED=True
 
 SOCIAL_AUTH_TUNNISTAMO_KEY=
 SOCIAL_AUTH_TUNNISTAMO_SECRET=
