Enable helusers migration

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ OIDC_REQUIRE_API_SCOPE_FOR_AUTHENTICATION=False
 OIDC_ISSUER=https://tunnistamo.test.hel.ninja/openid,https://tunnistus.test.hel.ninja/auth/realms/helsinki-tunnistus
 OIDC_API_AUTHORIZATION_FIELD=authorization.permissions.scopes
 HELUSERS_BACK_CHANNEL_LOGOUT_ENABLED=True
+HELUSERS_USER_MIGRATE_ENABLED=False
 
 SOCIAL_AUTH_TUNNISTAMO_KEY=
 SOCIAL_AUTH_TUNNISTAMO_SECRET=
